[gd_scene load_steps=27 format=2]

[ext_resource path="res://assets/star_09.png" type="Texture" id=1]
[ext_resource path="res://assets/star_02.png" type="Texture" id=2]
[ext_resource path="res://assets/star_08.png" type="Texture" id=3]
[ext_resource path="res://assets/planet02.png" type="Texture" id=4]
[ext_resource path="res://assets/star_06.png" type="Texture" id=5]
[ext_resource path="res://assets/planet09.png" type="Texture" id=6]
[ext_resource path="res://assets/star_07.png" type="Texture" id=7]
[ext_resource path="res://Fonts/Kenney Future Narrow.ttf" type="DynamicFontData" id=9]
[ext_resource path="res://HUB/Shop.gd" type="Script" id=10]

[sub_resource type="StyleBoxFlat" id=18]
bg_color = Color( 0, 0, 0, 1 )

[sub_resource type="StyleBoxFlat" id=19]
bg_color = Color( 0.0941176, 0, 0.211765, 1 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0, 0, 0, 1 )

[sub_resource type="StyleBoxFlat" id=22]
bg_color = Color( 0, 0, 0, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.772549, 0.0235294, 0.94902, 1 )

[sub_resource type="StyleBoxFlat" id=20]
bg_color = Color( 0, 0, 0, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.568627, 0, 1, 1 )

[sub_resource type="StyleBoxFlat" id=23]
bg_color = Color( 0, 0, 0, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 1, 0, 0.960784, 1 )

[sub_resource type="Theme" id=21]
Button/styles/hover = SubResource( 22 )
Button/styles/normal = SubResource( 20 )
Button/styles/pressed = SubResource( 23 )

[sub_resource type="DynamicFont" id=7]
size = 50
font_data = ExtResource( 9 )

[sub_resource type="DynamicFont" id=9]
size = 40
font_data = ExtResource( 9 )

[sub_resource type="DynamicFont" id=17]
font_data = ExtResource( 9 )

[sub_resource type="StyleBoxFlat" id=24]
bg_color = Color( 0.0705882, 0, 0.0862745, 1 )

[sub_resource type="Theme" id=25]
Label/styles/normal = SubResource( 24 )

[sub_resource type="DynamicFont" id=10]
size = 30
font_data = ExtResource( 9 )

[sub_resource type="DynamicFont" id=12]
size = 36
font_data = ExtResource( 9 )

[sub_resource type="DynamicFont" id=13]
size = 34
font_data = ExtResource( 9 )

[sub_resource type="DynamicFont" id=15]
size = 24
font_data = ExtResource( 9 )

[sub_resource type="DynamicFont" id=16]
size = 24
font_data = ExtResource( 9 )

[node name="CanvasLayer" type="CanvasLayer"]
script = ExtResource( 10 )

[node name="Background" type="MarginContainer" parent="."]
margin_right = 1920.0
margin_bottom = 1000.0

[node name="Panel" type="Panel" parent="Background"]
margin_right = 1920.0
margin_bottom = 1000.0
custom_styles/panel = SubResource( 18 )

[node name="SpaceGraphic" type="MarginContainer" parent="."]
margin_left = 400.0
margin_right = 1920.0
margin_bottom = 400.0

[node name="Star08" type="Sprite" parent="SpaceGraphic"]
position = Vector2( 740, 44 )
scale = Vector2( 0.162109, 0.162109 )
texture = ExtResource( 3 )

[node name="Star02" type="Sprite" parent="SpaceGraphic"]
position = Vector2( 1375, 105 )
scale = Vector2( 0.21875, 0.21875 )
texture = ExtResource( 2 )

[node name="Planet02" type="Sprite" parent="SpaceGraphic"]
position = Vector2( 350, 400 )
scale = Vector2( 0.382812, 0.382812 )
texture = ExtResource( 4 )

[node name="Planet09" type="Sprite" parent="SpaceGraphic"]
position = Vector2( 1026, 146 )
scale = Vector2( 0.0875, 0.0875 )
texture = ExtResource( 6 )

[node name="Star09" type="Sprite" parent="SpaceGraphic"]
position = Vector2( -78, 100 )
scale = Vector2( 0.113769, 0.113769 )
texture = ExtResource( 1 )

[node name="Star07" type="Sprite" parent="SpaceGraphic"]
position = Vector2( 656, 307 )
scale = Vector2( 0.131836, 0.131836 )
texture = ExtResource( 7 )

[node name="Star17" type="Sprite" parent="SpaceGraphic"]
position = Vector2( -222, 262 )
scale = Vector2( 0.131836, 0.131836 )
texture = ExtResource( 7 )

[node name="Star06" type="Sprite" parent="SpaceGraphic"]
position = Vector2( 1218, 344 )
scale = Vector2( 0.189453, 0.189453 )
texture = ExtResource( 5 )

[node name="Star18" type="Sprite" parent="SpaceGraphic"]
position = Vector2( 1043, 1055 )
scale = Vector2( 0.189453, 0.189453 )
texture = ExtResource( 5 )

[node name="Star10" type="Sprite" parent="SpaceGraphic"]
position = Vector2( 407, 99 )
scale = Vector2( 0.0800781, 0.0800781 )
texture = ExtResource( 5 )

[node name="Star11" type="Sprite" parent="SpaceGraphic"]
position = Vector2( 105, 223 )
scale = Vector2( 0.0917969, 0.0917969 )
texture = ExtResource( 5 )

[node name="Star19" type="Sprite" parent="SpaceGraphic"]
position = Vector2( -189, 1050 )
scale = Vector2( 0.0917969, 0.0917969 )
texture = ExtResource( 5 )

[node name="Star03" type="Sprite" parent="SpaceGraphic"]
position = Vector2( 1055, 39 )
scale = Vector2( 0.109375, 0.109375 )
texture = ExtResource( 2 )

[node name="Star12" type="Sprite" parent="SpaceGraphic"]
position = Vector2( 904, 209 )
scale = Vector2( 0.0732422, 0.0732422 )
texture = ExtResource( 3 )

[node name="Star04" type="Sprite" parent="SpaceGraphic"]
position = Vector2( 45, 360 )
scale = Vector2( 0.0488281, 0.0488281 )
texture = ExtResource( 2 )

[node name="Star05" type="Sprite" parent="SpaceGraphic"]
position = Vector2( 1167, 153 )
scale = Vector2( 0.0488281, 0.0488281 )
texture = ExtResource( 2 )

[node name="Star13" type="Sprite" parent="SpaceGraphic"]
position = Vector2( 619, 138 )
scale = Vector2( 0.0488281, 0.0488281 )
texture = ExtResource( 2 )

[node name="Star14" type="Sprite" parent="SpaceGraphic"]
position = Vector2( 837, 349 )
scale = Vector2( 0.0488281, 0.0488281 )
texture = ExtResource( 2 )

[node name="Star15" type="Sprite" parent="SpaceGraphic"]
position = Vector2( 1279, 48 )
scale = Vector2( 0.0488281, 0.0488281 )
texture = ExtResource( 2 )

[node name="Star16" type="Sprite" parent="SpaceGraphic"]
position = Vector2( 1385, 308 )
scale = Vector2( 0.0488281, 0.0488281 )
texture = ExtResource( 2 )

[node name="MenuBackground" type="MarginContainer" parent="."]
margin_top = 400.0
margin_right = 1920.0
margin_bottom = 1000.0

[node name="Panel" type="Panel" parent="MenuBackground"]
margin_right = 1920.0
margin_bottom = 600.0
custom_styles/panel = SubResource( 19 )

[node name="ShipIcon" type="MarginContainer" parent="."]
visible = false
margin_right = 400.0
margin_bottom = 400.0

[node name="Panel" type="Panel" parent="ShipIcon"]
margin_right = 400.0
margin_bottom = 400.0
custom_styles/panel = SubResource( 4 )

[node name="Buttons" type="MarginContainer" parent="."]
margin_left = 1400.0
margin_top = 400.0
margin_right = 1920.0
margin_bottom = 1000.0
theme = SubResource( 21 )

[node name="VBoxContainer" type="VBoxContainer" parent="Buttons"]
margin_right = 520.0
margin_bottom = 600.0
rect_pivot_offset = Vector2( -606, -72 )

[node name="ReturnButton" type="Button" parent="Buttons/VBoxContainer"]
margin_right = 520.0
margin_bottom = 600.0
rect_min_size = Vector2( 0, 600 )
custom_fonts/font = SubResource( 7 )
text = "Return"

[node name="NameLabels" type="MarginContainer" parent="."]
margin_top = 400.0
margin_right = 300.0
margin_bottom = 746.0
rect_min_size = Vector2( 0, 346 )
theme = SubResource( 21 )

[node name="LabelContainer" type="VBoxContainer" parent="NameLabels"]
margin_right = 300.0
margin_bottom = 600.0
rect_min_size = Vector2( 0, 346 )
custom_constants/separation = 0

[node name="PewPewLabel" type="Label" parent="NameLabels/LabelContainer"]
margin_right = 300.0
margin_bottom = 150.0
rect_min_size = Vector2( 300, 150 )
custom_fonts/font = SubResource( 9 )
text = "Lasers"
align = 1
valign = 1
autowrap = true

[node name="PointDefenseLabel" type="Label" parent="NameLabels/LabelContainer"]
margin_top = 150.0
margin_right = 300.0
margin_bottom = 300.0
rect_min_size = Vector2( 300, 150 )
custom_fonts/font = SubResource( 9 )
text = "Point Defense"
align = 1
valign = 1
autowrap = true

[node name="BuyPD" type="Button" parent="NameLabels/LabelContainer/PointDefenseLabel"]
margin_right = 300.0
margin_bottom = 150.0
rect_min_size = Vector2( 0, 150 )
custom_fonts/font = SubResource( 17 )
text = "Point Defense Lasers: $999"

[node name="IonCannonLabel" type="Label" parent="NameLabels/LabelContainer"]
margin_top = 300.0
margin_right = 300.0
margin_bottom = 450.0
rect_min_size = Vector2( 300, 150 )
custom_fonts/font = SubResource( 9 )
text = "Ion Cannon"
align = 1
valign = 1
autowrap = true

[node name="BuyIC" type="Button" parent="NameLabels/LabelContainer/IonCannonLabel"]
margin_right = 300.0
margin_bottom = 150.0
rect_min_size = Vector2( 0, 150 )
custom_fonts/font = SubResource( 17 )
text = " Ion Cannon: $999"

[node name="MissileLabel" type="Label" parent="NameLabels/LabelContainer"]
margin_top = 450.0
margin_right = 300.0
margin_bottom = 600.0
rect_min_size = Vector2( 300, 150 )
custom_fonts/font = SubResource( 9 )
text = "Missile Launcher"
align = 1
valign = 1
autowrap = true

[node name="BuyML" type="Button" parent="NameLabels/LabelContainer/MissileLabel"]
margin_right = 300.0
margin_bottom = 150.0
rect_min_size = Vector2( 0, 150 )
custom_fonts/font = SubResource( 17 )
text = "Missile Launcher: $999"

[node name="PewPewTrackers" type="MarginContainer" parent="."]
margin_left = 300.0
margin_top = 400.0
margin_right = 340.0
margin_bottom = 440.0
rect_min_size = Vector2( 550, 150 )
theme = SubResource( 25 )

[node name="Panel" type="Panel" parent="PewPewTrackers"]
margin_right = 550.0
margin_bottom = 150.0
rect_min_size = Vector2( 0, 150 )

[node name="PewPewLabels" type="VBoxContainer" parent="PewPewTrackers"]
margin_right = 550.0
margin_bottom = 150.0
rect_min_size = Vector2( 0, 150 )
custom_constants/separation = 0

[node name="PPUp1" type="Label" parent="PewPewTrackers/PewPewLabels"]
margin_right = 550.0
margin_bottom = 50.0
rect_min_size = Vector2( 0, 50 )
custom_fonts/font = SubResource( 10 )
text = "Energy Cost: 0/3"
align = 1
valign = 1

[node name="PPUp2" type="Label" parent="PewPewTrackers/PewPewLabels"]
margin_top = 50.0
margin_right = 550.0
margin_bottom = 100.0
rect_min_size = Vector2( 0, 50 )
custom_fonts/font = SubResource( 10 )
text = "Range: 0/3"
align = 1
valign = 1

[node name="PPUp3" type="Label" parent="PewPewTrackers/PewPewLabels"]
margin_top = 100.0
margin_right = 550.0
margin_bottom = 150.0
rect_min_size = Vector2( 0, 50 )
custom_fonts/font = SubResource( 10 )
text = "Laser Speed: 0/3"
align = 1
valign = 1

[node name="PointDefenseTrackers" type="MarginContainer" parent="."]
margin_left = 300.0
margin_top = 550.0
margin_right = 850.0
margin_bottom = 700.0
rect_min_size = Vector2( 550, 150 )
theme = SubResource( 25 )

[node name="Panel" type="Panel" parent="PointDefenseTrackers"]
margin_right = 550.0
margin_bottom = 150.0
rect_min_size = Vector2( 0, 150 )

[node name="PointDefenseLabels" type="VBoxContainer" parent="PointDefenseTrackers"]
margin_right = 550.0
margin_bottom = 150.0
rect_min_size = Vector2( 0, 150 )
custom_constants/separation = 0

[node name="PDUp1" type="Label" parent="PointDefenseTrackers/PointDefenseLabels"]
margin_right = 550.0
margin_bottom = 50.0
rect_min_size = Vector2( 0, 50 )
custom_fonts/font = SubResource( 10 )
text = "Energy Cost: 0/3"
align = 1
valign = 1

[node name="PDUp2" type="Label" parent="PointDefenseTrackers/PointDefenseLabels"]
margin_top = 50.0
margin_right = 550.0
margin_bottom = 100.0
rect_min_size = Vector2( 0, 50 )
custom_fonts/font = SubResource( 10 )
text = "Fire Rate: 0/3"
align = 1
valign = 1

[node name="PDUp3" type="Label" parent="PointDefenseTrackers/PointDefenseLabels"]
margin_top = 100.0
margin_right = 550.0
margin_bottom = 150.0
rect_min_size = Vector2( 0, 50 )
custom_fonts/font = SubResource( 10 )
text = "Energy Regen: 0/3"
align = 1
valign = 1

[node name="IonCannonTrackers" type="MarginContainer" parent="."]
margin_left = 300.0
margin_top = 700.0
margin_right = 850.0
margin_bottom = 850.0
rect_min_size = Vector2( 550, 150 )
theme = SubResource( 25 )

[node name="Panel" type="Panel" parent="IonCannonTrackers"]
margin_right = 550.0
margin_bottom = 150.0

[node name="IonCannonLabels" type="VBoxContainer" parent="IonCannonTrackers"]
margin_right = 550.0
margin_bottom = 150.0
custom_constants/separation = 0

[node name="ICUp1" type="Label" parent="IonCannonTrackers/IonCannonLabels"]
margin_right = 550.0
margin_bottom = 50.0
rect_min_size = Vector2( 0, 50 )
custom_fonts/font = SubResource( 10 )
text = "Beam Length: 0/3"
align = 1
valign = 1

[node name="ICUp2" type="Label" parent="IonCannonTrackers/IonCannonLabels"]
margin_top = 50.0
margin_right = 550.0
margin_bottom = 100.0
rect_min_size = Vector2( 0, 50 )
custom_fonts/font = SubResource( 10 )
text = "Sweep Range: 0/3"
align = 1
valign = 1

[node name="ICUp3" type="Label" parent="IonCannonTrackers/IonCannonLabels"]
margin_top = 100.0
margin_right = 550.0
margin_bottom = 150.0
rect_min_size = Vector2( 0, 50 )
custom_fonts/font = SubResource( 10 )
text = "Sweep Speed: 0/3"
align = 1
valign = 1

[node name="MissileTrackers" type="MarginContainer" parent="."]
margin_left = 300.0
margin_top = 850.0
margin_right = 850.0
margin_bottom = 1000.0
rect_min_size = Vector2( 550, 150 )
theme = SubResource( 25 )

[node name="Panel" type="Panel" parent="MissileTrackers"]
margin_right = 550.0
margin_bottom = 150.0
rect_min_size = Vector2( 0, 150 )

[node name="MissileLabels" type="VBoxContainer" parent="MissileTrackers"]
margin_right = 550.0
margin_bottom = 150.0
rect_min_size = Vector2( 0, 150 )
custom_constants/separation = 0

[node name="MLUp1" type="Label" parent="MissileTrackers/MissileLabels"]
margin_right = 550.0
margin_bottom = 50.0
rect_min_size = Vector2( 0, 50 )
custom_fonts/font = SubResource( 10 )
text = "Missile Speed: 0/3"
align = 1
valign = 1

[node name="MLUp2" type="Label" parent="MissileTrackers/MissileLabels"]
margin_top = 50.0
margin_right = 550.0
margin_bottom = 100.0
rect_min_size = Vector2( 0, 50 )
custom_fonts/font = SubResource( 10 )
text = "Cluster: 0/3"
align = 1
valign = 1

[node name="MLUp3" type="Label" parent="MissileTrackers/MissileLabels"]
margin_top = 100.0
margin_right = 550.0
margin_bottom = 150.0
rect_min_size = Vector2( 0, 50 )
custom_fonts/font = SubResource( 10 )
text = "Lock-on Speed: 0/3"
align = 1
valign = 1

[node name="PewPewShop" type="MarginContainer" parent="."]
margin_left = 850.0
margin_top = 400.0
margin_right = 1100.0
margin_bottom = 550.0
rect_min_size = Vector2( 250, 150 )
theme = SubResource( 21 )

[node name="PewPewGrid" type="GridContainer" parent="PewPewShop"]
margin_right = 250.0
margin_bottom = 150.0
rect_min_size = Vector2( 0, 150 )
custom_constants/vseparation = 0
custom_constants/hseparation = 0
columns = 2

[node name="PP1Button" type="Button" parent="PewPewShop/PewPewGrid"]
margin_right = 100.0
margin_bottom = 50.0
rect_min_size = Vector2( 100, 50 )
custom_fonts/font = SubResource( 12 )
text = "+"

[node name="PP1Label" type="Label" parent="PewPewShop/PewPewGrid"]
margin_left = 100.0
margin_right = 250.0
margin_bottom = 50.0
rect_min_size = Vector2( 150, 50 )
custom_fonts/font = SubResource( 13 )
text = "$000"
align = 1
valign = 1

[node name="PP2Button" type="Button" parent="PewPewShop/PewPewGrid"]
margin_top = 50.0
margin_right = 100.0
margin_bottom = 100.0
rect_min_size = Vector2( 100, 50 )
custom_fonts/font = SubResource( 12 )
text = "+"

[node name="PP2Label" type="Label" parent="PewPewShop/PewPewGrid"]
margin_left = 100.0
margin_top = 50.0
margin_right = 250.0
margin_bottom = 100.0
rect_min_size = Vector2( 150, 50 )
custom_fonts/font = SubResource( 13 )
text = "$000"
align = 1
valign = 1

[node name="PP3Button" type="Button" parent="PewPewShop/PewPewGrid"]
margin_top = 100.0
margin_right = 100.0
margin_bottom = 150.0
rect_min_size = Vector2( 100, 50 )
custom_fonts/font = SubResource( 12 )
text = "+"

[node name="PP3Label" type="Label" parent="PewPewShop/PewPewGrid"]
margin_left = 100.0
margin_top = 100.0
margin_right = 250.0
margin_bottom = 150.0
rect_min_size = Vector2( 150, 50 )
custom_fonts/font = SubResource( 13 )
text = "$000"
align = 1
valign = 1

[node name="PointDefenseShop" type="MarginContainer" parent="."]
margin_left = 850.0
margin_top = 550.0
margin_right = 1100.0
margin_bottom = 700.0
rect_min_size = Vector2( 250, 150 )
theme = SubResource( 21 )

[node name="PDGrid" type="GridContainer" parent="PointDefenseShop"]
margin_right = 250.0
margin_bottom = 150.0
rect_min_size = Vector2( 0, 150 )
custom_constants/vseparation = 0
custom_constants/hseparation = 0
columns = 2

[node name="PDButton1" type="Button" parent="PointDefenseShop/PDGrid"]
margin_right = 100.0
margin_bottom = 50.0
rect_min_size = Vector2( 100, 50 )
custom_fonts/font = SubResource( 12 )
text = "+"

[node name="PDLabel1" type="Label" parent="PointDefenseShop/PDGrid"]
margin_left = 100.0
margin_right = 250.0
margin_bottom = 50.0
rect_min_size = Vector2( 150, 50 )
custom_fonts/font = SubResource( 13 )
text = "$000"
align = 1
valign = 1

[node name="PDButton2" type="Button" parent="PointDefenseShop/PDGrid"]
margin_top = 50.0
margin_right = 100.0
margin_bottom = 100.0
rect_min_size = Vector2( 100, 50 )
custom_fonts/font = SubResource( 12 )
text = "+"

[node name="PDLabel2" type="Label" parent="PointDefenseShop/PDGrid"]
margin_left = 100.0
margin_top = 50.0
margin_right = 250.0
margin_bottom = 100.0
rect_min_size = Vector2( 150, 50 )
custom_fonts/font = SubResource( 13 )
text = "$000"
align = 1
valign = 1

[node name="PDButton3" type="Button" parent="PointDefenseShop/PDGrid"]
margin_top = 100.0
margin_right = 100.0
margin_bottom = 150.0
rect_min_size = Vector2( 100, 50 )
custom_fonts/font = SubResource( 12 )
text = "+"

[node name="PDLabel3" type="Label" parent="PointDefenseShop/PDGrid"]
margin_left = 100.0
margin_top = 100.0
margin_right = 250.0
margin_bottom = 150.0
rect_min_size = Vector2( 150, 50 )
custom_fonts/font = SubResource( 13 )
text = "$000"
align = 1
valign = 1

[node name="IonCannonShop" type="MarginContainer" parent="."]
margin_left = 850.0
margin_top = 700.0
margin_right = 1100.0
margin_bottom = 850.0
rect_min_size = Vector2( 250, 150 )
theme = SubResource( 21 )

[node name="ICGrid" type="GridContainer" parent="IonCannonShop"]
margin_right = 250.0
margin_bottom = 150.0
rect_min_size = Vector2( 0, 150 )
custom_constants/vseparation = 0
custom_constants/hseparation = 0
columns = 2

[node name="ICButton1" type="Button" parent="IonCannonShop/ICGrid"]
margin_right = 100.0
margin_bottom = 50.0
rect_min_size = Vector2( 100, 50 )
custom_fonts/font = SubResource( 12 )
text = "+"

[node name="ICLabel1" type="Label" parent="IonCannonShop/ICGrid"]
margin_left = 100.0
margin_right = 250.0
margin_bottom = 50.0
rect_min_size = Vector2( 150, 50 )
custom_fonts/font = SubResource( 13 )
text = "$000"
align = 1
valign = 1

[node name="ICButton2" type="Button" parent="IonCannonShop/ICGrid"]
margin_top = 50.0
margin_right = 100.0
margin_bottom = 100.0
rect_min_size = Vector2( 100, 50 )
custom_fonts/font = SubResource( 12 )
text = "+"

[node name="ICLabel2" type="Label" parent="IonCannonShop/ICGrid"]
margin_left = 100.0
margin_top = 50.0
margin_right = 250.0
margin_bottom = 100.0
rect_min_size = Vector2( 150, 50 )
custom_fonts/font = SubResource( 13 )
text = "$000"
align = 1
valign = 1

[node name="ICButton3" type="Button" parent="IonCannonShop/ICGrid"]
margin_top = 100.0
margin_right = 100.0
margin_bottom = 150.0
rect_min_size = Vector2( 100, 50 )
custom_fonts/font = SubResource( 12 )
text = "+"

[node name="ICLabel3" type="Label" parent="IonCannonShop/ICGrid"]
margin_left = 100.0
margin_top = 100.0
margin_right = 250.0
margin_bottom = 150.0
rect_min_size = Vector2( 150, 50 )
custom_fonts/font = SubResource( 13 )
text = "$000"
align = 1
valign = 1

[node name="MissileShop" type="MarginContainer" parent="."]
margin_left = 850.0
margin_top = 850.0
margin_right = 1100.0
margin_bottom = 1000.0
rect_min_size = Vector2( 250, 150 )
theme = SubResource( 21 )

[node name="MissGrid" type="GridContainer" parent="MissileShop"]
margin_right = 250.0
margin_bottom = 150.0
rect_min_size = Vector2( 0, 150 )
custom_constants/vseparation = 0
custom_constants/hseparation = 0
columns = 2

[node name="MissButton1" type="Button" parent="MissileShop/MissGrid"]
margin_right = 100.0
margin_bottom = 50.0
rect_min_size = Vector2( 100, 50 )
custom_fonts/font = SubResource( 12 )
text = "+"

[node name="MissLabel1" type="Label" parent="MissileShop/MissGrid"]
margin_left = 100.0
margin_right = 250.0
margin_bottom = 50.0
rect_min_size = Vector2( 150, 50 )
custom_fonts/font = SubResource( 13 )
text = "$000"
align = 1
valign = 1

[node name="MissButton2" type="Button" parent="MissileShop/MissGrid"]
margin_top = 50.0
margin_right = 100.0
margin_bottom = 100.0
rect_min_size = Vector2( 100, 50 )
custom_fonts/font = SubResource( 12 )
text = "+"

[node name="MissLabel2" type="Label" parent="MissileShop/MissGrid"]
margin_left = 100.0
margin_top = 50.0
margin_right = 250.0
margin_bottom = 100.0
rect_min_size = Vector2( 150, 50 )
custom_fonts/font = SubResource( 13 )
text = "$000"
align = 1
valign = 1

[node name="MissButton3" type="Button" parent="MissileShop/MissGrid"]
margin_top = 100.0
margin_right = 100.0
margin_bottom = 150.0
rect_min_size = Vector2( 100, 50 )
custom_fonts/font = SubResource( 12 )
text = "+"

[node name="MissLabel3" type="Label" parent="MissileShop/MissGrid"]
margin_left = 100.0
margin_top = 100.0
margin_right = 250.0
margin_bottom = 150.0
rect_min_size = Vector2( 150, 50 )
custom_fonts/font = SubResource( 13 )
text = "$000"
align = 1
valign = 1

[node name="Resources" type="MarginContainer" parent="."]
margin_left = 1100.0
margin_top = 400.0
margin_right = 1140.0
margin_bottom = 440.0
rect_min_size = Vector2( 300, 600 )
theme = SubResource( 21 )

[node name="VBoxContainer" type="VBoxContainer" parent="Resources"]
margin_right = 300.0
margin_bottom = 600.0
custom_constants/separation = 0

[node name="Paperclips" type="Label" parent="Resources/VBoxContainer"]
margin_right = 300.0
margin_bottom = 150.0
rect_min_size = Vector2( 300, 150 )
custom_fonts/font = SubResource( 15 )
text = "Paperclips:
$10000000"
align = 1
valign = 1

[node name="SpacingLabel" type="Label" parent="Resources/VBoxContainer"]
margin_top = 150.0
margin_right = 300.0
margin_bottom = 400.0
rect_min_size = Vector2( 0, 250 )

[node name="Missiles" type="Label" parent="Resources/VBoxContainer"]
margin_top = 400.0
margin_right = 300.0
margin_bottom = 500.0
rect_min_size = Vector2( 300, 100 )
custom_fonts/font = SubResource( 15 )
text = "Missiles:
99999"
align = 1
valign = 1

[node name="BuyMissileButton" type="Button" parent="Resources/VBoxContainer"]
margin_top = 500.0
margin_right = 300.0
margin_bottom = 600.0
rect_min_size = Vector2( 0, 100 )
custom_fonts/font = SubResource( 16 )
text = "Buy 1 Missile: $100"

[connection signal="pressed" from="Buttons/VBoxContainer/ReturnButton" to="." method="_on_ReturnButton_pressed"]
[connection signal="pressed" from="NameLabels/LabelContainer/PointDefenseLabel/BuyPD" to="." method="_on_BuyPD_pressed"]
[connection signal="pressed" from="NameLabels/LabelContainer/IonCannonLabel/BuyIC" to="." method="_on_BuyIC_pressed"]
[connection signal="pressed" from="NameLabels/LabelContainer/MissileLabel/BuyML" to="." method="_on_BuyML_pressed"]
[connection signal="pressed" from="PewPewShop/PewPewGrid/PP1Button" to="." method="_on_PP1Button_pressed"]
[connection signal="pressed" from="PewPewShop/PewPewGrid/PP2Button" to="." method="_on_PP2Button_pressed"]
[connection signal="pressed" from="PewPewShop/PewPewGrid/PP3Button" to="." method="_on_PP3Button_pressed"]
[connection signal="pressed" from="PointDefenseShop/PDGrid/PDButton1" to="." method="_on_PDButton1_pressed"]
[connection signal="pressed" from="PointDefenseShop/PDGrid/PDButton2" to="." method="_on_PDButton2_pressed"]
[connection signal="pressed" from="PointDefenseShop/PDGrid/PDButton3" to="." method="_on_PDButton3_pressed"]
[connection signal="pressed" from="IonCannonShop/ICGrid/ICButton1" to="." method="_on_ICButton1_pressed"]
[connection signal="pressed" from="IonCannonShop/ICGrid/ICButton2" to="." method="_on_ICButton2_pressed"]
[connection signal="pressed" from="IonCannonShop/ICGrid/ICButton3" to="." method="_on_ICButton3_pressed"]
[connection signal="pressed" from="MissileShop/MissGrid/MissButton1" to="." method="_on_MissButton1_pressed"]
[connection signal="pressed" from="MissileShop/MissGrid/MissButton2" to="." method="_on_MissButton2_pressed"]
[connection signal="pressed" from="MissileShop/MissGrid/MissButton3" to="." method="_on_MissButton3_pressed"]
[connection signal="pressed" from="Resources/VBoxContainer/BuyMissileButton" to="." method="_on_BuyMissileButton_pressed"]
